packages/pug-lexer/test/errors/multi-line-interpolation.pug
p.
    #[strong This strong text is really really long. This strong
    text is really really long. This strong text is really really
    long.]